--- a/src/main/resources/themes/default/popup_team_card.fxml
+++ b/src/main/resources/themes/default/popup_team_card.fxml
@@ -4,7 +4,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<TitledPane fx:id="teamNumberLabel" animated="false" collapsible="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="300.0" text="&lt;Team #&gt;" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.game.PopupTeamCardController">
+<TitledPane fx:id="teamPaneRoot" animated="false" collapsible="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="200.0" text="&lt;Team #&gt;" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.game.PopupTeamCardController">
    <content>
       <VBox fx:id="teamPane" />
    </content>
