--- a/src/main/resources/themes/default/game_card.fxml
+++ b/src/main/resources/themes/default/game_card.fxml
@@ -8,7 +8,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<GridPane fx:id="gameCardRoot" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#onClick" styleClass="game-card-root" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.game.GameCardController">
+<GridPane fx:id="gameCardRoot" focusTraversable="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#onClick" styleClass="game-card-root" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.game.GameCardController">
   <columnConstraints>
       <ColumnConstraints hgrow="NEVER" minWidth="115.0" />
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="250.0" />
@@ -66,7 +66,7 @@
       </Label>
       <ImageView fx:id="mapImageView" pickOnBounds="true" preserveRatio="true" GridPane.hgrow="NEVER" GridPane.rowIndex="1" GridPane.rowSpan="2147483647" GridPane.vgrow="NEVER">
          <GridPane.margin>
-            <Insets right="5.0" />
+            <Insets right="10.0" />
          </GridPane.margin></ImageView>
       <AnchorPane GridPane.rowIndex="4" GridPane.rowSpan="3">
          <children>
@@ -86,4 +86,7 @@
       <Label fx:id="modsPrefix" styleClass="mods-prefix" text="mods" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="5" />
       <Label styleClass="prefix" text="by" GridPane.columnIndex="1" GridPane.rowIndex="6" />
    </children>
+   <padding>
+      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+   </padding>
 </GridPane>
