--- a/src/main/resources/themes/default/games_tiled.fxml
+++ b/src/main/resources/themes/default/games_tiled.fxml
@@ -11,6 +11,6 @@
 
 <ScrollPane fx:id="tiledScrollPane" fitToWidth="true" hbarPolicy="NEVER" styleClass="games-tiled" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.game.GamesTiledController">
    <content>
-      <FlowPane fx:id="tiledFlowPane" nodeOrientation="LEFT_TO_RIGHT" prefWrapLength="0.0" />
+      <FlowPane fx:id="tiledFlowPane" nodeOrientation="LEFT_TO_RIGHT" prefWrapLength="0.0" vgap="10.0" />
    </content>
 </ScrollPane>
