Fixed text wrap in chat for AM/PM

--- a/src/main/resources/themes/default/style-webview.css
+++ b/src/main/resources/themes/default/style-webview.css
@@ -87,6 +87,10 @@ a {
   color: orange;
 }
 
+.chat-message .time {
+  white-space: nowrap;
+}
+
 /***************** News (WebView) *****************/
 
 html.news-detail {
