Added featured mod description to game scroll pane

--- a/src/main/resources/themes/default/games.fxml
+++ b/src/main/resources/themes/default/games.fxml
@@ -70,23 +70,23 @@
                       <Insets left="10.0" />
                     </padding>
                   </Label>
-                  <Label fx:id="gameModeLabel" maxHeight="1.7976931348623157E308" text="&lt;Game mode&gt;">
-                    <VBox.margin>
-                      <Insets />
-                    </VBox.margin>
-                    <padding>
-                      <Insets left="10.0" />
-                    </padding>
-                  </Label>
                         <Label fx:id="mapLabel" maxHeight="1.7976931348623157E308" text="&lt;Map&gt;">
                            <padding>
                               <Insets left="10.0" />
                            </padding>
                            <VBox.margin>
-                              <Insets top="10.0" />
+                              <Insets />
                            </VBox.margin>
                         </Label>
-                        <Label fx:id="mapDescriptionLabel" maxHeight="1.7976931348623157E308" text="&lt;Map description&gt;">
+                  <Label fx:id="gameModeLabel" maxHeight="1.7976931348623157E308" text="&lt;Game mode&gt;">
+                    <VBox.margin>
+                      <Insets top="10.0" />
+                    </VBox.margin>
+                    <padding>
+                      <Insets left="10.0" />
+                    </padding>
+                  </Label>
+                        <Label fx:id="gameModeDescriptionLabel" maxHeight="1.7976931348623157E308" text="&lt;Game Mode description&gt;" wrapText="true">
                            <padding>
                               <Insets left="10.0" />
                            </padding>
