--- a/src/main/resources/themes/default/style.css
+++ b/src/main/resources/themes/default/style.css
@@ -154,8 +154,9 @@
 
   /* These are NOT from modena. */
   -fx-context-menu-background: rgba(0, 0, 0, .8);
-  -fx-tile-background:  rgba(50, 50, 50, .9);
-  -fx-transparent-hover:  rgba(255, 255, 255, .1);
+  -fx-tile-background: rgba(50, 50, 50, .9);
+  -fx-transparent-hover: rgba(255, 255, 255, .1);
+  -fx-drop-shadow: dropshadow(gaussian, #ffffff66, 5, 0.5, 0, 0);
 }
 
 .scroll-bar > .increment-button > .increment-arrow,
@@ -283,8 +284,12 @@
 }
 /***************** Tooltip *****************/
 
-.tooltip{
-  -fx-font-size: 1em;
+.tooltip {
+  -fx-background-radius: 0;
+  -fx-background-color: -fx-background;
+  -fx-border-width: 1;
+  -fx-border-color: -fx-box-border;
+  -fx-effect: -fx-drop-shadow;
 }
 
 /***************** Window *****************/
@@ -313,7 +318,7 @@
 }
 
 .main-menu-button:hover {
-  -fx-effect: dropshadow(gaussian, #ffffff66, 5, 0.8, 0, 0);
+  -fx-effect: -fx-drop-shadow;
 }
 
 .username-button {
@@ -323,7 +328,7 @@
 }
 
 .username-button:hover {
-  -fx-effect: dropshadow(gaussian, #ffffff66, 5, 0.8, 0, 0);
+  -fx-effect: -fx-drop-shadow;
 }
 
 .username-button > .label {
@@ -349,12 +354,12 @@
 
 .main-navigation > .toggle-button:hover {
   -fx-text-fill: -fx-mid-text-color;
-  -fx-effect: dropshadow(gaussian, rgba(255,255,255,.2), 5, 0.8, 0, 0);
+  -fx-effect: -fx-drop-shadow;
 }
 
 .main-navigation > .toggle-button:selected {
   -fx-text-fill: -fx-light-text-color;
-  -fx-effect: dropshadow(gaussian, #ffffff66, 5, 0.8, 0, 0);
+  -fx-effect: -fx-drop-shadow;
 }
 
 
@@ -471,7 +476,7 @@
 .persistent-notifications {
   -fx-background-color: -fx-background;
   -fx-background-radius: 5;
-  -fx-effect: dropshadow(gaussian, #ffffff66, 5, 0.8, 0, 0);
+  -fx-effect: -fx-drop-shadow;
 }
 
 .no-notifications {
@@ -519,7 +524,6 @@
 
 .popup {
   -fx-background-color: -fx-background;
-  -fx-effect: dropshadow(gaussian, #ffffff66, 5, 0.8, 0, 0);
 }
 
 /***************** Tabs *****************/
@@ -552,7 +556,6 @@
 
 .game-card-root:hover,
 .game-card-root:focused {
-
   -fx-background-color: -fx-control-inner-background;
 }
 
@@ -589,7 +592,7 @@
 /***************** Game detail *****************/
 
 .map-preview {
-  -fx-effect: dropshadow(gaussian, #ffffff66, 5, 0.8, 0, 0);
+  -fx-effect: -fx-drop-shadow;
 }
 
 /***************** Window decoration *****************/
@@ -656,7 +659,7 @@
 }
 
 .login-icon {
- -fx-effect: dropshadow(gaussian, rgba(255,255,255,.2), 15, 0.8, 0, 0);
+ -fx-effect: -fx-drop-shadow;
 }
 
 /***************** Web view *****************/
