--- a/src/main/resources/themes/default/comment_card.fxml
+++ b/src/main/resources/themes/default/comment_card.fxml
@@ -1,14 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.game.CommentCardController">
+<GridPane fx:id="root" styleClass="comment-card" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.game.CommentCardController">
+   <columnConstraints>
+      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+      <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0" />
+   </columnConstraints>
+   <rowConstraints>
+      <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+   </rowConstraints>
    <children>
-      <Label fx:id="playerNameLabel" text="&lt;Player Name&gt;" />
-      <Label fx:id="commentDateLabel" text="&lt;Comment Date&gt;" />
-      <Label fx:id="commentLabel" text="&lt;Comment&gt;" />
+      <Label fx:id="authorLabel" styleClass="player-name-label" text="&lt;Player Name&gt;">
+         <GridPane.margin>
+            <Insets />
+         </GridPane.margin>
+      </Label>
+      <Label fx:id="dateLabel" styleClass="comment-date-label" text="&lt;Comment Date&gt;" GridPane.columnIndex="1" />
+      <Label fx:id="commentLabel" styleClass="comment-label" text="&lt;Comment&gt;" wrapText="true" GridPane.columnSpan="2147483647" GridPane.rowIndex="1" />
    </children>
-</Pane>
+</GridPane>
