--- a/src/main/resources/themes/default/map_preview_large.fxml
+++ b/src/main/resources/themes/default/map_preview_large.fxml
@@ -1,26 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.game.MapPreviewLargeController">
+<GridPane fx:id="root" minHeight="256.0" minWidth="512.0" styleClass="map-preview-large" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.game.MapPreviewLargeController">
+  <columnConstraints>
+    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+  </columnConstraints>
+  <rowConstraints>
+    <RowConstraints vgrow="SOMETIMES" />
+      <RowConstraints vgrow="SOMETIMES" />
+    <RowConstraints vgrow="SOMETIMES" />
+    <RowConstraints vgrow="SOMETIMES" />
+      <RowConstraints vgrow="SOMETIMES" />
+  </rowConstraints>
    <children>
-      <AnchorPane>
-         <children>
-            <ImageView fx:id="largeMapPreview" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
-         </children>
-      </AnchorPane>
-      <AnchorPane>
-         <children>
-            <Label fx:id="mapNameLabel" text="Label" AnchorPane.topAnchor="0.0" />
-            <Label fx:id="maxPlayerLabel" text="Label" AnchorPane.topAnchor="0.0" />
-            <Label fx:id="mapSizeLabel" text="Label" AnchorPane.topAnchor="0.0" />
-            <Label fx:id="mapDescriptionLabel" text="Label" AnchorPane.topAnchor="0.0" />
-            <VBox fx:id="commentContainer" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-         </children>
-      </AnchorPane>
+      <ImageView fx:id="largeMapPreview" pickOnBounds="true" preserveRatio="true" GridPane.rowSpan="2147483647" />
+      <Label fx:id="mapNameLabel" styleClass="map-name-label" text="&lt;Map Name&gt;" GridPane.columnIndex="1" />
+      <Label fx:id="maxPlayerLabel" styleClass="max-player-label" text="&lt;Max Player&gt;" GridPane.columnIndex="3">
+         <GridPane.margin>
+            <Insets />
+         </GridPane.margin></Label>
+      <Label fx:id="mapSizeLabel" styleClass="map-size-label" text="&lt;Map Size&gt;" GridPane.columnIndex="2" />
+      <Label fx:id="mapDescriptionLabel" styleClass="map-description-label" text="&lt;Map Description&gt;" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="1" />
+      <VBox fx:id="commentContainer" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="2" GridPane.rowSpan="2147483647" />
    </children>
-</Pane>
+   <padding>
+      <Insets bottom="5.0" left="5.0" right="5.0" top="32.0" />
+   </padding>
+</GridPane>
