--- a/src/main/resources/themes/default/style.css
+++ b/src/main/resources/themes/default/style.css
@@ -541,6 +541,11 @@
   -fx-background-color: linear-gradient(to left, transparent, -fx-accent);
 }
 
+/***************** Large Map Preview *****************/
+.map-preview-large .comment-container{
+  -fx-spacing:10;
+  -fx-background-color: derive(-fx-base,100%);
+}
 /***************** Game Card *****************/
 
 .game-card-root:hover,
