--- a/src/main/resources/themes/default/style.css
+++ b/src/main/resources/themes/default/style.css
@@ -542,9 +542,25 @@
 }
 
 /***************** Large Map Preview *****************/
+.map-preview-large{
+  -fx-padding: 10px,5px,5px,5px;
+}
+
+.map-preview-large .comment-container-scrollpane{
+  -fx-padding: 5px,5px,5px,5px;
+}
+
 .map-preview-large .comment-container{
   -fx-spacing:10;
-  -fx-background-color: derive(-fx-base,100%);
+  -fx-background-color: derive(-fx-base,-50%);
+}
+/*FIXME can't seem to get the padding correctly */
+.map-preview-large .large-image-preview{
+  -fx-padding: 0,30,0,0;
+}
+
+.comment-card{
+  -fx-background-color: -fx-control-inner-background-alt;
 }
 /***************** Game Card *****************/
 
