--- a/src/main/resources/themes/default/map_preview_large.fxml
+++ b/src/main/resources/themes/default/map_preview_large.fxml
@@ -6,32 +6,34 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<GridPane fx:id="root" minHeight="256.0" minWidth="512.0" styleClass="map-preview-large" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.game.MapPreviewLargeController">
+<GridPane fx:id="root" styleClass="map-preview-large" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.game.MapPreviewLargeController">
   <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+    <ColumnConstraints />
+    <ColumnConstraints />
+      <ColumnConstraints />
+      <ColumnConstraints />
   </columnConstraints>
   <rowConstraints>
-    <RowConstraints vgrow="SOMETIMES" />
-      <RowConstraints vgrow="SOMETIMES" />
-    <RowConstraints vgrow="SOMETIMES" />
-    <RowConstraints vgrow="SOMETIMES" />
-      <RowConstraints vgrow="SOMETIMES" />
+    <RowConstraints />
+      <RowConstraints />
+    <RowConstraints />
   </rowConstraints>
    <children>
-      <ImageView fx:id="largeMapPreview" pickOnBounds="true" preserveRatio="true" GridPane.rowSpan="2147483647" />
-      <Label fx:id="mapNameLabel" styleClass="map-name-label" text="&lt;Map Name&gt;" GridPane.columnIndex="1" />
-      <Label fx:id="maxPlayerLabel" styleClass="max-player-label" text="&lt;Max Player&gt;" GridPane.columnIndex="3">
+      <ImageView fx:id="largeImagePreview" pickOnBounds="true" preserveRatio="true" styleClass="large-image-preview" GridPane.rowSpan="3">
+         <GridPane.margin>
+            <Insets />
+         </GridPane.margin></ImageView>
+      <Label fx:id="mapNameLabel" styleClass="map-name-label" text="&lt;Map Name&gt;" GridPane.columnIndex="1" GridPane.vgrow="NEVER" />
+      <Label fx:id="maxPlayerLabel" styleClass="max-player-label" text="&lt;Max Player&gt;" GridPane.columnIndex="3" GridPane.vgrow="NEVER">
          <GridPane.margin>
             <Insets />
          </GridPane.margin></Label>
-      <Label fx:id="mapSizeLabel" styleClass="map-size-label" text="&lt;Map Size&gt;" GridPane.columnIndex="2" />
-      <Label fx:id="mapDescriptionLabel" styleClass="map-description-label" text="&lt;Map Description&gt;" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="1" />
-      <VBox fx:id="commentContainer" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="2" GridPane.rowSpan="2147483647" />
+      <Label fx:id="mapSizeLabel" styleClass="map-size-label" text="&lt;Map Size&gt;" GridPane.columnIndex="2" GridPane.vgrow="NEVER" />
+      <Label fx:id="mapDescriptionLabel" styleClass="map-description-label" text="&lt;Map Description&gt;" wrapText="true" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="TOP" />
+      <ScrollPane GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="2">
+         <content>
+            <VBox fx:id="commentContainer" styleClass="comment-container" />
+         </content>
+      </ScrollPane>
    </children>
-   <padding>
-      <Insets bottom="5.0" left="5.0" right="5.0" top="32.0" />
-   </padding>
 </GridPane>
