ReAdded commentaCardController and MapPreviewLargeController

--- a/src/main/resources/themes/default/comment_card.fxml
+++ b/src/main/resources/themes/default/comment_card.fxml
@@ -5,7 +5,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<GridPane fx:id="root" styleClass="comment-card" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.game.CommentCardController">
+<GridPane fx:id="root" styleClass="comment-card" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.map.CommentCardController">
    <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
       <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0" />
