Fixed html parser and prep for master merge

--- a/src/main/resources/themes/default/comment_card.fxml
+++ b/src/main/resources/themes/default/comment_card.fxml
@@ -15,7 +15,7 @@
       <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
    </rowConstraints>
    <children>
-      <Label fx:id="authorLabel" styleClass="player-name-label" text="&lt;Player Name&gt;">
+      <Label fx:id="authorLabel" styleClass="player-displayName-label" text="&lt;Player Name&gt;">
          <GridPane.margin>
             <Insets />
          </GridPane.margin>
