--- a/src/main/resources/themes/default/map_preview_large.fxml
+++ b/src/main/resources/themes/default/map_preview_large.fxml
@@ -19,11 +19,11 @@
     <RowConstraints />
   </rowConstraints>
    <children>
-      <ImageView fx:id="largeImagePreview" pickOnBounds="true" preserveRatio="true" styleClass="large-image-preview" GridPane.rowSpan="3">
+      <ImageView fx:id="largeImagePreview" fitHeight="512.0" fitWidth="512.0" pickOnBounds="true" preserveRatio="true" styleClass="large-image-preview" GridPane.rowSpan="3">
          <GridPane.margin>
             <Insets />
          </GridPane.margin></ImageView>
-      <Label fx:id="mapNameLabel" styleClass="map-name-label" text="&lt;Map Name&gt;" GridPane.columnIndex="1" GridPane.vgrow="NEVER" />
+      <Label fx:id="mapNameLabel" styleClass="map-displayName-label" text="&lt;Map Name&gt;" GridPane.columnIndex="1" GridPane.vgrow="NEVER" />
       <Label fx:id="maxPlayerLabel" styleClass="max-player-label" text="&lt;Max Player&gt;" GridPane.columnIndex="3" GridPane.vgrow="NEVER">
          <GridPane.margin>
             <Insets />
