--- a/src/main/resources/themes/default/login.fxml
+++ b/src/main/resources/themes/default/login.fxml
@@ -15,7 +15,7 @@
         <Image url="@../../images/logo_transparent.png" />
       </image>
       <VBox.margin>
-        <Insets bottom="50.0" top="70.0"/>
+          <Insets bottom="50.0" top="70.0"/>
       </VBox.margin>
     </ImageView>
     <AnchorPane>
@@ -45,6 +45,8 @@
                 <Insets bottom="10.0" top="10.0" />
               </VBox.margin>
             </CheckBox>
+              <Label fx:id="loginErrorLabel" maxWidth="1.7976931348623157E308" minHeight="0" maxHeight="60.0"
+                     textFill="#c60d0d" visible="false" wrapText="true"/>
             <Button fx:id="loginButton" defaultButton="true" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#loginButtonClicked" text="%login.button.login" />
             <HBox alignment="CENTER" spacing="10.0">
               <children>
@@ -59,7 +61,7 @@
         </VBox>
       </children>
       <VBox.margin>
-        <Insets bottom="20.0" left="18.0" right="18.0" top="20.0"/>
+          <Insets bottom="20.0" left="18.0" right="18.0" top="20.0"/>
       </VBox.margin>
     </AnchorPane>
   </children>
