Log Out implemented
MainController has its own Stage because it has property listeners... so it should not be shared with the Login window.

--- a/src/main/resources/themes/default/main.fxml
+++ b/src/main/resources/themes/default/main.fxml
@@ -89,7 +89,7 @@
                         prefWidth="100.0" styleClass="username-button" text="Username">
               <items>
                 <MenuItem mnemonicParsing="false" onAction="#onShowUserInfoClicked" text="%chat.userContext.userInfo"/>
-                <MenuItem mnemonicParsing="false" text="%menu.logOut"/>
+                <MenuItem mnemonicParsing="false" onAction="#onLogOutClicked" text="%menu.logOut"/>
               </items>
             </MenuButton>
           </children>
